# consumer-behavior-complexity

./: .gitignore  README.md  experiments.ipynb  init.sh  multiprocess_training.py  preprocessing.ipynb  pyproject.toml
data/: mcc_to_category.csv
